syntax = "proto3";

package model;

option java_package = "com.chefencasa.model";
option java_outer_classname = "CategoriaProto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service CategoriasService {
  rpc TraerCategoria(Categoria) returns (Categoria) {}
  rpc FindAll(google.protobuf.Empty) returns (Categorias) {}
}

message Categorias {
  repeated Categoria categoria = 1;
}

message Categoria {
  int32 id = 1;
  string categoria = 2;
}